--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: Clean Blog
+title: Soar Valley MDC
 header-img: img/home-bg.jpg
-email: your-email@yourdomain.com
+email: bryan@know-how.com
 copyright_name: Your/Project/Corporate Name
-description: "Write your site description here. It will be used as your sites meta description as well!"
+description: "Welcome to the Home page of the Soar Valley Metal Detecting Club"
 baseurl: "/soarvalley-mdc"
 url: "http://yourdomain.com"
 twitter_username: SBootstrap
