--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: soarvalleymdc@gmail.com
 copyright_name: Soar Valley Metal Detecting Club
 description: "Welcome to the Home page of the Soar Valley Metal Detecting Club"
 baseurl: ""
-url: "http://soarvalleymdc.org.uk"
+url: "http://www.soarvalleymdc.org.uk"
 twitter_username: 
 github_username:  
 facebook_username: 
